добавил путь извне лампочка загорается по ответу от Арды осталось сделать открывание и разбитие при неудаче

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="HYYYYYYYT">HIYYYYYYYYYT</string>
     <string name="btnONcaption">Включить</string>
     <string name="btnOFFcaption">Выключить</string>
+    <string name="sw_wifi_name">WiFi</string>
 
 </resources>
